adl-frontend/src/test/resources/unit/error/semantic/adlRefs/ref2.adl
//#SemanticError GroupId=ADL ErrorId=ADL_NOT_FOUND line=4

composite adlRefs.ref2 extends 
foo.unknownADL
{

}
